// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLinkLists renders lists of links 1`] = `
<div>
  <div
    class="ds-l-container"
  >
    <ul
      class="hc-c-footer__list ds-u-margin-bottom--1"
      role="list"
    >
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/topics"
        >
          footer.allTopics
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/glossary"
        >
          footer.glossary
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/contact-us"
        >
          footer.contactUs
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/archive"
        >
          footer.archive
        </a>
      </li>
    </ul>
    <ul
      class="hc-c-footer__list ds-u-border-bottom--1 ds-u-margin-bottom--2 ds-u-padding-bottom--2"
      role="list"
    >
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="http://www.cms.gov/About-CMS/Agency-Information/Aboutwebsite/CMSNondiscriminationNotice.html"
        >
          footer.nondiscriminationAndA11y
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/privacy"
        >
          footer.privacyPolicy
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <button>
          Privacy Settings
        </button>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/privacy/#links"
        >
          footer.linkingPolicy
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="/using-this-site"
        >
          footer.usingThisSite
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="http://www.hhs.gov/open/plain-writing/index.html"
        >
          footer.plainWriting
        </a>
      </li>
    </ul>
    <ul
      class="hc-c-footer__list"
      role="list"
    >
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="中文 footer.languageResources"
          href="/language-resource/#chinese"
          lang="zh"
        >
          中文
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Kreyòl footer.languageResources"
          href="/language-resource/#creole"
          lang="ht"
        >
          Kreyòl
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Français footer.languageResources"
          href="/language-resource/#french"
          lang="fr"
        >
          Français
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Deutsch footer.languageResources"
          href="/language-resource/#german"
          lang="de"
        >
          Deutsch
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="ગુજરાતી footer.languageResources"
          href="/language-resource/#gujarati"
          lang="gu"
        >
          ગુજરાતી
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="हिंदी footer.languageResources"
          href="/language-resource/#hindi"
          lang="hi"
        >
          हिंदी
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Italiano footer.languageResources"
          href="/language-resource/#italian"
          lang="it"
        >
          Italiano
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="日本語 footer.languageResources"
          href="/language-resource/#japanese"
          lang="ja"
        >
          日本語
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="한국어 footer.languageResources"
          href="/language-resource/#korean"
          lang="ko"
        >
          한국어
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Polski footer.languageResources"
          href="/language-resource/#polish"
          lang="pl"
        >
          Polski
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Português footer.languageResources"
          href="/language-resource/#portuguese"
          lang="pt"
        >
          Português
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Русский footer.languageResources"
          href="/language-resource/#russian"
          lang="ru"
        >
          Русский
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Español footer.languageResources"
          href="/language-resource/#spanish"
          lang="es"
        >
          Español
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Tagalog footer.languageResources"
          href="/language-resource/#tagalog"
          lang="tl"
        >
          Tagalog
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="tiếng việt footer.languageResources"
          href="/language-resource/#vietnamese"
          lang="vi"
        >
          tiếng việt
        </a>
      </li>
    </ul>
  </div>
</div>
`;

exports[`InlineLinkLists renders lists of links with absolute URLs 1`] = `
<div>
  <div
    class="ds-l-container"
  >
    <ul
      class="hc-c-footer__list ds-u-margin-bottom--1"
      role="list"
    >
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/topics"
        >
          footer.allTopics
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/glossary"
        >
          footer.glossary
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/contact-us"
        >
          footer.contactUs
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/archive"
        >
          footer.archive
        </a>
      </li>
    </ul>
    <ul
      class="hc-c-footer__list ds-u-border-bottom--1 ds-u-margin-bottom--2 ds-u-padding-bottom--2"
      role="list"
    >
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="http://www.cms.gov/About-CMS/Agency-Information/Aboutwebsite/CMSNondiscriminationNotice.html"
        >
          footer.nondiscriminationAndA11y
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/privacy"
        >
          footer.privacyPolicy
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <button>
          Privacy Settings
        </button>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/privacy/#links"
        >
          footer.linkingPolicy
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="https://www.healthcare.gov/using-this-site"
        >
          footer.usingThisSite
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          href="http://www.hhs.gov/open/plain-writing/index.html"
        >
          footer.plainWriting
        </a>
      </li>
    </ul>
    <ul
      class="hc-c-footer__list"
      role="list"
    >
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="中文 footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#chinese"
          lang="zh"
        >
          中文
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Kreyòl footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#creole"
          lang="ht"
        >
          Kreyòl
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Français footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#french"
          lang="fr"
        >
          Français
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Deutsch footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#german"
          lang="de"
        >
          Deutsch
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="ગુજરાતી footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#gujarati"
          lang="gu"
        >
          ગુજરાતી
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="हिंदी footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#hindi"
          lang="hi"
        >
          हिंदी
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Italiano footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#italian"
          lang="it"
        >
          Italiano
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="日本語 footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#japanese"
          lang="ja"
        >
          日本語
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="한국어 footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#korean"
          lang="ko"
        >
          한국어
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Polski footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#polish"
          lang="pl"
        >
          Polski
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Português footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#portuguese"
          lang="pt"
        >
          Português
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Русский footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#russian"
          lang="ru"
        >
          Русский
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Español footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#spanish"
          lang="es"
        >
          Español
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="Tagalog footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#tagalog"
          lang="tl"
        >
          Tagalog
        </a>
        <span
          aria-hidden="true"
          class="hc-c-footer__delimiter"
        />
      </li>
      <li
        class="hc-c-footer__inline-item"
      >
        <a
          aria-label="tiếng việt footer.languageResources"
          href="https://www.healthcare.gov/language-resource/#vietnamese"
          lang="vi"
        >
          tiếng việt
        </a>
      </li>
    </ul>
  </div>
</div>
`;
